--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,15 @@
+@font-face {
+    font-family: BlurMedium;
+    src: url(Blur_Medium.ttf);
+    }
+
 body {
     background: url(../images/ad_background.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    font-family: BlurMedium, sans-serif;
 }
 
 .chardiv {
