--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,16 +43,19 @@ h1 {
 h2 {
     clear:both;
     margin-bottom: 5px;
+    font-weight: normal;
 }
 
 h3 {
     margin-bottom: 5px;
     margin-top: 5px;
+    font-weight: normal;
 }
 
 h4 {
     margin-top: 2px;
     margin-bottom: 5px;
+    font-weight: normal;
 }
 
 #button, #restart {
@@ -62,13 +65,14 @@ h4 {
 }
 
 #attack {
-    font-weight: bold;
+    font-weight: normal;
     margin-top: 15px;
+    font-family: BlurMedium;
 }
 
 #countered, #attacked, #win-lose {
     clear: both;
-font-weight: bold;
+font-weight: normal;
 }
 
 #attack, #reset {
